spinner: removed (evidently flaky) FF2 support and tweaked a couple of minor layout issues see http://forum.jquery.com/topic/firefox-2-support

--- a/themes/base/jquery.ui.spinner.css
+++ b/themes/base/jquery.ui.spinner.css
@@ -2,7 +2,6 @@
 ----------------------------------*/
 span.ui-spinner { display: -moz-inline-box; display: inline-block; position: relative; 
     overflow: hidden; padding: 0; vertical-align: middle; }
-.ui-spinner-innertube {display;block; position: relative;} 
 .ui-spinner-input { }
 .ui-spinner .ui-spinner-button { width: 16px; height: 50%; font-size: .5em; padding: 0; margin: 0; z-index: 100; text-align: center; vertical-align: middle; position: absolute; cursor: default; display: block; overflow: hidden; }
 .ui-spinner a.ui-spinner-button { } 
@@ -12,13 +11,13 @@ span.ui-spinner { display: -moz-inline-box; display: inline-block; position: rel
 
 /* ltr (default) */
 .ui-spinner-ltr { direction: ltr; }
-.ui-spinner-ltr .ui-spinner-input { float: left; margin-left: .4em; margin-right: 22px; }
+.ui-spinner-ltr .ui-spinner-input { float: left; }
 .ui-spinner-ltr .ui-spinner-button { right: 0; }
 .ui-spinner-ltr a.ui-spinner-button { }
 
 /* rtl */
 .ui-spinner-rtl { direction: rtl; }
-.ui-spinner-rtl .ui-spinner-input { float: right; margin-left: 22px; margin-right: .4em; }
+.ui-spinner-rtl .ui-spinner-input { float: right; }
 .ui-spinner-rtl .ui-spinner-button { left: 0; }
 .ui-spinner-rtl a.ui-spinner-button { }
 
